0032248: Visualization - load "false" deferred glTF data immediately